--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         }
 
         /*Starting Leaves*/
-        #leaves {position:sticky;top:-50px;width:100%;text-align: center;}
+        #leaves {position:relative;top:-50px;width:100%;text-align: center;}
 
         #leaves i {
             display: inline-block;
@@ -521,7 +521,7 @@
         border-bottom: 1px solid #222;
         border-left: 0px solid #222;
         border-right: 1px solid #222;
-        background: linear-gradient(to right, rgba(0,100,0,1), #005524636600);
+        background: linear-gradient(to right, rgba(0,100,0,1), #524636);
         z-index: 1;
         }
 
@@ -578,6 +578,52 @@
         #leaves i:nth-of-type(n) { -webkit-animation-timing-function:ease-in-out;}
 
         /*Autumn Leaves*/
+        #auleaves {position:sticky;top:-50px;width:100%;text-align: center;}
+
+        #auleaves i {
+            display: inline-block;
+            width: 200px;
+            height: 150px;
+            background: linear-gradient(to bottom right, #e4b04a, #524636);
+            transform: skew(20deg);
+            border-radius: 5% 40% 70%;
+            box-shadow: inset 0px 0px 1px #222;
+            border: 1px solid #333;
+            z-index: 1;
+            -webkit-animation: falling 5s 0s infinite;
+        }
+
+        #auleaves i:nth-of-type(2n) { -webkit-animation: falling2 5s 0s infinite; }
+        #auleaves i:nth-of-type(3n) { -webkit-animation: falling3 5s 0s infinite; }
+
+        #auleaves i:before {
+        position: sticky;
+        content: '';
+        top: 117px;
+        right: 9px;
+        height: 27px;
+        width: 32px;
+        transform: rotate(49deg);
+        border-radius: 0% 0% 0% 0%;
+        border-top: 1px solid #222;
+        border-bottom: 1px solid #222;
+        border-left: 0px solid #222;
+        border-right: 1px solid #222;
+        background: linear-gradient(to right, rgba(0,100,0,1), #524636);
+        z-index: 1;
+        }
+
+        #auleaves i:after {
+        content: '';
+        height: 250px;
+        width: 250px;
+        background: linear-gradient(to right, rgba(0,0,0,.15), rgba(0,0,0,0));
+        display: block;
+        transform: rotate(125deg);
+        position: absolute;
+        left: 85px;
+        border-radius:50%;
+        }
 
         #auleaves i:nth-of-type(n)    { height:23px; width:30px; }
         #auleaves i:nth-of-type(n):before { width:7px; height:5px; top:17px; right:1px; }
@@ -684,7 +730,7 @@
         #ssleaves i:nth-of-type(3n) { -webkit-animation: falling3 5s 0s infinite; }
 
         #ssleaves i:before {
-        position: absolute;
+        position: relative;
         content: '';
         top: 117px;
         right: 9px;
@@ -754,6 +800,181 @@
 
         #ssleaves i:nth-of-type(n) { -webkit-animation-timing-function:ease-in-out;}
 
+        .card {
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  display: flex; 
+  padding: 30px 10px; 
+  transition: background .4s ease in;  
+  width: 60%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: transform .4s ease;
+  cursor: pointer;
+}
+
+.container {
+  width: 100%;
+  max-width: 1500px;
+  max-height: 600px;
+  height: 100%;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+  box-sizing: border-box;
+  width: 400px;
+  height: 360px;
+  margin-bottom: 20px;
+}
+
+#item-1:checked ~ .cards #song-3, #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2 {
+  transform: translatex(-40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-2, #item-2:checked ~ .cards #song-3, #item-3:checked ~ .cards #song-1 {
+  transform: translatex(40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-1, #item-2:checked ~ .cards #song-2, #item-3:checked ~ .cards #song-3 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+  
+  img {
+    box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+  }
+}
+
+.player {
+  background-color: #fff;
+  border-radius: 8px;
+  min-width: 320px;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 10px;
+}
+
+.upper-part {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  height: 36px;
+  overflow: hidden;
+}
+
+.play-icon{ margin-right: 10px; }
+
+.song-info {
+  width: calc(100% - 32px);
+  align-items: center;
+  display: block;
+}
+
+.song-info .title {
+  color: #403d40;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.sub-line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.subtitle, .time {
+  font-size: 12px;
+  line-height: 16px;
+  color: #c6c5c6;
+}
+
+.time {
+  font-size: 12px;
+  line-height: 16px;
+  color: #a5a5a5;
+  font-weight: 500;
+  margin-left: auto;
+}
+
+.progress-bar {
+  height: 3px;
+  width: 100%;
+  background-color: #e9efff;
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.progress {
+  display: block;
+  position: relative;
+  width: 60%;
+  height: 100%;
+  background-color: #2992dc;
+  border-radius: 6px;
+}
+
+.info-area {
+  width: 100%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 30px;
+  transition: transform .4s ease-in;
+}
+
+#item-2:checked ~ .player #test {
+  transform: translateY(0);
+}
+
+#item-2:checked ~ .player #test  {
+  transform: translateY(-40px);
+}
+
+#item-3:checked ~ .player #test  {
+  transform: translateY(-80px);
+}
+
+div.gallery {
+  margin: 50px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 250px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  height: 150px;
+  width: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+  font-size: 18px;
+}
+
     </style>
 </head>
 <body>
@@ -815,48 +1036,46 @@
     changeImageAutumn();
     changeParticleAutumn();
     }
-    function changeImageAutumn() {
-    var img = document.getElementById("image");
-    img.src="autumn.jpg";
-    }
-    function changeParticleAutumn() {
-    var particle = document.getElementById("leaves");
-    particle.id = "auleaves"
-    }
-
     function summer() {
     var element = document.body;
     element.className = 'summer'; 
     changeImageSummer();
     changeParticleSummerSpring();
     }
-    function changeImageSummer()
-    {
-    var img = document.getElementById("image");
-    img.src="summer.jpeg";
-    }
-    function changeParticleSummerSpring() {
-    var particle = document.getElementById("leaves");
-    particle.id = "ssleaves"
-    }
-
     function winter() {
     var element = document.body;
     element.className = 'winter'; 
     changeImageWinter();
     changeParticleAutumn();
     }
-    function changeImageWinter()
-    {
-    var img = document.getElementById("image");
-    img.src="winter.jpg";
-    }
-
     function spring() {
     var element = document.body;
     element.className = 'spring'; 
     changeImageSpring();
     changeParticleSummerSpring();
+    }
+
+
+    function changeParticleSummerSpring() {
+    var particle = document.getElementById("leaves");
+    particle.id = "ssleaves"
+    }
+    function changeParticleAutumn() {
+    var particle = document.getElementById("ssleaves");
+    particle.id = "leaves"
+    }
+    function changeImageAutumn() {
+    var img = document.getElementById("image");
+    img.src="autumn.jpg";
+    }
+    function changeImageSummer()
+    {
+    var img = document.getElementById("image");
+    img.src="summer.jpeg";
+    }
+    function changeImageWinter()  {
+    var img = document.getElementById("image");
+    img.src="winter.jpg";
     }
     function changeImageSpring()
     {
@@ -915,12 +1134,14 @@
         <section id="Fun-Facts">
             <h2 id="fav-songs-heading">Fun Facts!</h2>
             <h5 id="fav-songs-des">(just some random information)</h5>
-            <p>I absolutely love tarts</p>
-            <p>I play badminton!</p>      
-            <p>I have a plushie octopus called Tubbie</p>
-            <p>One of my favourite games is Chinese Checkers!</p>      
-            <p>My worst subject in HSC was Physics and my best subject was English</p>
-            <p>I have a mini lego collection and my first ever piece was a Snorlax</p>
+            <section>
+                <p>I absolutely love tarts</p>
+                <p>I play badminton!</p>      
+                <p>I have a plushie octopus called Tubbie</p>
+                <p>One of my favourite games is Chinese Checkers!</p>      
+                <p>My worst subject in HSC was Physics and my best subject was English</p>
+                <p>I have a mini lego collection and my first ever piece was a Snorlax</p>
+            </section>
         </section>
     </div>
     <hr> 
@@ -965,6 +1186,64 @@
               <h6>I grew up playing instruments (now I main piano and guitar) and just grew a passion for music in general. 
                 Nowadays, you'll basically never see me without headphones and even though I listen to a range of genres, I love indie and rock!
               </h6>
+              <aside>
+                <div class="container">
+                    <input type="radio" name="slider" id="item-1" checked> 
+                    <input type="radio" name="slider" id="item-2">
+                    <input type="radio" name="slider" id="item-3">
+                  <div class="cards">
+                    <label class="card" for="item-1" id="song-1">
+                      <img src="https://images.unsplash.com/photo-1530651788726-1dbf58eeef1f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=882&q=80" alt="song" width = 100% height = 100% border-radius = 10px object-fit = cover>
+                    </label>
+                    <label class="card" for="item-2" id="song-2">
+                      <img src="https://images.unsplash.com/photo-1559386484-97dfc0e15539?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80" alt="song"  width = 100% height = 100% border-radius = 10px object-fit = cover>
+                    </label>
+                    <label class="card" for="item-3" id="song-3">
+                      <img src="https://images.unsplash.com/photo-1533461502717-83546f485d24?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="song"  width = 100% height = 100% border-radius = 10px object-fit = cover>
+                    </label>
+                  </div>
+                  <div class="player">
+                    <div class="upper-part">
+                      <div class="play-icon">
+                        <svg width="20" height="20" fill="#2992dc" stroke="#2992dc" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-play" viewBox="0 0 24 24">
+                          <defs/>
+                          <path d="M5 3l14 9-14 9V3z"/>
+                        </svg>
+                      </div>
+                      <div class="info-area" id="test">
+                        <label class="song-info" id="song-info-1">
+                          <div class="title">Fitzpleasure</div>
+                          <div class="sub-line">
+                            <div class="subtitle">alt-J</div>
+                            <div class="time">3:39</div>
+                          </div>
+                        </label>
+                        <label class="song-info" id="song-info-2">
+                          <div class="title">Strawberries and Wine</div>
+                          <div class="sub-line">
+                            <div class="subtitle">Jaylon Ashaun</div>
+                            <div class="time">1:30</div>
+                          </div>
+                        </label>
+                        <label class="song-info" id="song-info-3">
+                          <div class="title">dearest</div>
+                          <div class="sub-line">
+                            <div class="subtitle">lofi.samurai</div>
+                            <div class="time">1:36</div>
+                          </div>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="progress-bar">
+                      <span class="progress"></span>
+                    </div>
+                  </div>
+                </div>
+                <script>$('input').on('change', function() {
+                    $('body').toggleClass('blue');
+                  });</script>
+
+                </aside>
         </section>
     </div>
     <hr> 
